[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/CustomizationScreen/SettingsSlider.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[node name="SettingsSlider" type="Panel"]
margin_right = 212.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
theme = ExtResource( 2 )
theme_type_variation = "PanelAlt"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 212.0
margin_bottom = 12.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_right = 182.0
margin_bottom = 11.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
text = "setting"

[node name="ResetButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 183.0
margin_right = 212.0
margin_bottom = 12.0
text = "reset"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 212.0
margin_bottom = 25.0

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 181.0
margin_bottom = 12.0
rect_min_size = Vector2( 70, 0 )
size_flags_horizontal = 3
scrollable = false

[node name="Value" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 182.0
margin_right = 212.0
margin_bottom = 11.0
rect_min_size = Vector2( 30, 0 )
text = "0"
align = 2
clip_text = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
